# muninn

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  test.hurl  test_get.hurl  test_post.hurl
.github/workflows/: docker.yml
data/messages/my_user/: 2024-02-18.json
hurl/: context.hurl  get.hurl  message.hurl  post.hurl  search.hurl
scripts/: muninn.service  publish_container.ps1  publish_container.sh
src/: main.rs  scheduler.rs
src/capabilities/: mod.rs  start.rs  test.rs
src/clients/: chat.rs  chat_gpt.rs  embeddings.rs  mod.rs
src/clients/embeddings/: fastembed.rs  mod.rs  ollama.rs
src/handlers/: chat.rs  events.rs  handle_request_message.rs  mod.rs  summary.rs  user_attributes.rs
src/layers/: mod.rs  security.rs  selector.rs
src/repos/: attributes.rs  messages.rs  mod.rs
src/services/: chat.rs  mod.rs  summary.rs  user_attributes.rs
