[package]
name = "muninn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.5", features = ["full"] }
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.6"
uuid = { version = "1.7.0", features = ["v4"] }
dirs = "5.0.1"
chrono = "0.4.19"
tracing = "0.1"
tracing-subscriber = "0.3.18"
